add static pages

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,68 +1,126 @@
 <html>
-<head>
-  <!-- Link the style sheet here -->
-</head>
-<div>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
-    <div class="container-fluid">
-      <h2 style="padding-right: 5%;">Dealerships</h2>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" style="font-size: larger;" href="/about">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="font-size: larger;" href="/contact">Contact Us</a>
-          </li>
-        </ul>
+  <head>
+    <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/bootstrap.min.css" />
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: darkturquoise; height: 1in"
+    >
+      <div class="container-fluid">
+        <h2 style="padding-right: 5%">Dealerships</h2>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                style="font-size: larger"
+                aria-current="page"
+                href="/"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" style="font-size: larger" href="/about"
+                >About Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="font-size: larger" href="/contact"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
+    </nav>
+
+    <div class="card" style="width: 80%; margin: auto; margin-top: 2%">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <!-- Insert header information here -->
+        <h1 class="mb-3">About Us</h1>
+        <h6 style="text-align: center">
+          Welcome to Best Cars dealership, home to the best cars in North
+          America. We deal in sale of domestic and imported cars at reasonable
+          prices. We're dedicated to helping you find your perfect vehicle to
+          fit your lifestyle and budget. Our passion for automobiles and
+          commitment to customer satisfaction drive us to build long-term,
+          trust-based relationships.
+        </h6>
       </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+      <div style="display: flex; flex-direction: row; margin: auto">
+        <div class="card" style="width: 30%">
+          <img
+            class="card-img-top"
+            src="/static/person1.jpg"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <p class="title">Michael Rodriguez</p>
+            <p class="lead">Sales Manager</p>
+            <p class="card-text">
+              Michael has been with Best Cars Dealership for over 15 years,
+              starting as a sales associate and working his way up to Sales
+              Manager. His extensive knowledge of the automotive industry,
+              combined with his passion for helping customers, makes him an
+              invaluable asset to our team.
+            </p>
+            <p><strong>Michael@example.com</strong></p>
+          </div>
         </div>
-      </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+        <div class="card" style="width: 30%">
+          <img
+            class="card-img-top"
+            src="/static/person2.jpg"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <p class="title">Sarah Chen</p>
+            <p class="lead">Finance Director</p>
+            <p class="card-text">
+              Sarah is our Finance Director and has been with the dealership for
+              10 years. She has a strong background in finance and a keen
+              understanding of the automotive financing landscape. Sarah works
+              tirelessly to secure the best possible financing options for our
+              customers.
+            </p>
+            <p><strong>Sarah@example.com</strong></p>
+          </div>
         </div>
-      </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
-        <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+        <div class="card" style="width: 30%">
+          <img
+            class="card-img-top"
+            src="/static/person3.jpg"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <p class="title">David Lee</p>
+            <p class="lead">Service Manager</p>
+            <p class="card-text">
+              David leads our service department and has been a certified
+              mechanic for over 20 years. He is passionate about keeping
+              vehicles in top condition and is committed to providing our
+              customers with the highest quality service.
+            </p>
+            <p><strong>David@example.com</strong></p>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-    </div>
-    
-</div>
-
+  </body>
 </html>
